tests/errors/test-generic-error.sac
// SAC_TEST|include common.mk
// SAC_TEST|SAC2C_FLAGS += -check tc -b 1:loc -printstart 1:loc
// SAC_TEST|CALL_SAC2C := $(SAC2C) $(SAC2C_FLAGS)
//
// SAC_TEST|all: <file-name>
// SAC_TEST|<tab>OUTPUT=`$(CALL_SAC2C) $< 2>&1`; <nlslash>
// SAC_TEST|<tab>echo "$$OUTPUT" | grep -E "^Error:$$" | $(GREP_COMMAND_OUTPUT) "" 1; <nlslash>
// SAC_TEST|<tab>echo "$$OUTPUT" | grep -E "^  .+$$" | $(GREP_COMMAND_OUTPUT) "" 3; <nlslash>

int main () {
  return 0;
}